# keck-hires-aurora

./: MANIFEST.in  README.md  setup.cfg
hiresaurora/: __init__.py  alignment.py  background_subtraction.py  brightness_fitting.py  brightness_retrieval.py  calibration.py  data_processing.py  ephemeris.py  general.py  graphics.py  masking.py  observing_geometry.py  pipeline.py  planning.py  tabulation.py
hiresaurora/anc/: jupiter_spectrum_psg.txt
