[metadata]
name = hiresaurora
version = 1.2.0
author = Zachariah Milby
description = An aurora brightness retrieval algorithm for in-eclipse observations of the Galilean satellites taken with Keck/HIRES.
home_page = https://github.com/zachariahmilby/keck-hires-aurora

[options]
include_package_data = True
python_requires >= 3.10.0
packages = find:
install_requires =
   numpy==1.22.3
   matplotlib==3.5.1
   astropy==5.1
   astroquery==0.4.5
   astroplan==0.8
   lmfit==1.0.3
   scipy==1.8.0
   pandas==1.5.2
   statsmodels==0.13.5
   numdifftools==0.9.41
